--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bibliotheke</title>
     <link rel="stylesheet" href="./styles.CSS" />
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
   </head>
   <body>
     <section id="landing">
@@ -15,10 +16,23 @@
           <img class="Logo" src="./assets/Library.svg" alt="" />
           <ul class="nav__links">
             <li><a class="nav__link" href="">Home</a></li>
-            <li><a class="nav__link" href="">Contact</a></li>
+            <li><a class="nav__link" href="mailto:sebastianhollerer@Gmail.com" class="footer__link">Kontakt</a>
             <li><a class="nav__link__primary nav__link" href="">Books</a></li>
           </ul>
+        <button class="btn__menu" onclick="openMenu()">
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="menu__backdrop">
+          <button class="btn__menu btn__menu__close" onclick="closeMenu()">
+            <i class="fas fa-times"></i>
+          </button>
+          <ul class="menu__links">
+            <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Home</a></li>
+            <li class="menu__list"><a href="#features" class="menu__link" onclick="closeMenu()">Books</a></li>
+            <li class="menu__list"><a href="mailto:sebastianhollerer@Gmail.com" class="menu__link" onclick="closeMenu()">Kontakt</a></li>
+          </ul>
         </div>
+      </div>
       </nav>
       <header>
         <div class="header__container">
@@ -28,7 +42,10 @@
               Finde dein Traum Buch mit dieser
               <span class="purple" >Bücherei</span>
             </h2>
-            <button class="btn">browse book</button>
+            <a href="#features">
+
+              <button class="btn">Suche Bücher</button>
+            </a>
           </div>
           <figure class="header__img__wrapper">
             <img src="./assets/Undraw_Books.svg" alt="" />
@@ -76,7 +93,7 @@
                         <h3 class="highlight__subtitel">
                             Günstig
                         </h3>
-                        <p class="jighlight__para">
+                        <p class="highlight__para">
                             Kauf dir ein buch für nicht mehr als 10€!
                         </p>
                 </div>
@@ -87,15 +104,272 @@
       </section>
       <section id="features">
         <div class="container">
-          <div class="row"></div>
+          <div class="row">
+            <h2 class="section__titels"> Empfohlene <span class="purple"> Bücher </span></h2>
+            <div class="books">
+              <div class="book">
+                <figure class="book__img__wrapper">
+                  <img src="./assets/crack the coding interview.png" alt="" class="book__img">
+                </figure>
+                <div class="book__titel">
+                  Cracking the coding interview
+                </div>
+                <div class="book__ratings">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="book__price">
+                  <span class="book__price__normal">59.99€</span>14.99€
+                </div>
+              </div>
+              <div class="book">
+                <figure class="book__img__wrapper">
+                  <img src="./assets/atomic habits.jpg" alt="" class="book__img">
+                </figure>
+                <div class="book__titel">
+                Atomic Habits
+                </div>
+                <div class="book__ratings">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="book__price">
+                  <span class="book__price__normal">49.99€</span>10.99€
+                </div>
+              </div>
+              <div class="book">
+                <figure class="book__img__wrapper">
+                  <img src="./assets/david goggins.jpeg" alt="" class="book__img">
+                </figure>
+                <div class="book__titel">
+                  Can`t hurt me
+                </div>
+                <div class="book__ratings">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="book__price">
+                  <span class="book__price__normal">44.99€</span>12.99€
+                </div>
+              </div>
+              <div class="book">
+                <figure class="book__img__wrapper">
+                  <img src="./assets/deep work.jpeg" alt="" class="book__img">
+                </figure>
+                <div class="book__titel">
+                  Deep Work
+                </div>
+                <div class="book__ratings">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="book__price">
+                  <span class="book__price__normal">59.99€</span>14.99€
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <section id="recent">
         <div class="container">
-            <div class="row">   
+            <div class="row"> 
+             <h2 class="section__titels">Neulich erschinenene <span class="purple">Bücher</span></h2>
+             <div class="books__recent">
+              <div class="book">
+                <figure class="book__img__wrapper">
+                  <img src="./assets/book-1.jpeg" alt="" class="book__img">
+                </figure>
+                <div class="book__titel">
+                  The 10 X Rule
+                </div>
+                <div class="book__ratings">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="book__price">
+                  <span class="book__price__normal">79.99€</span>29.99€
+                </div>
+              </div>
+              <div class="book">
+                <figure class="book__img__wrapper">
+                  <img src="./assets/book-2.jpeg" alt="" class="book__img">
+                </figure>
+                <div class="book__titel">
+                  Be Obsessed Or Be Average
+                </div>
+                <div class="book__ratings">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="book__price">
+                  <span class="book__price__normal">79.99€</span>29.99€
+                </div>
+              </div>
+              <div class="book">
+                <figure class="book__img__wrapper">
+                  <img src="./assets/book-3.jpeg" alt="" class="book__img">
+                </figure>
+                <div class="book__titel">
+                  Rich Dad Poor Dad
+                </div>
+                <div class="book__ratings">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="book__price">
+                  <span class="book__price__normal">79.99€</span>29.99€
+                </div>
+              </div>
+              <div class="book">
+                <figure class="book__img__wrapper">
+                  <img src="./assets/book-4.jpeg" alt="" class="book__img">
+                </figure>
+                <div class="book__titel">
+                Cashflow Quadrant
+                </div>
+                <div class="book__ratings">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="book__price">
+                  <span class="book__price__normal">79.99€</span>29.99€
+                </div>
+              </div>
+              <div class="book">
+                <figure class="book__img__wrapper">
+                  <img src="./assets/book-5.jpeg" alt="" class="book__img">
+                </figure>
+                <div class="book__titel">
+                  48 Laws Of Power
+                </div>
+                <div class="book__ratings">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="book__price">
+                  <span class="book__price__normal">79.99€</span>29.99€
+                </div>
+              </div>
+              <div class="book">
+                <figure class="book__img__wrapper">
+                  <img src="./assets/book-6.jpeg" alt="" class="book__img">
+                </figure>
+                <div class="book__titel">
+                  The 5 Seconds Rule
+                </div>
+                <div class="book__ratings">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="book__price">
+                  <span class="book__price__normal">79.99€</span>29.99€
+                </div>
+              </div>
+              <div class="book">
+                <figure class="book__img__wrapper">
+                  <img src="./assets/book-7.jpg" alt="" class="book__img">
+                </figure>
+                <div class="book__titel">
+                  Your Next Five Moves
+                </div>
+                <div class="book__ratings">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="book__price">
+                  <span class="book__price__normal">79.99€</span>29.99€
+                </div>
+              </div>
+              <div class="book">
+                <figure class="book__img__wrapper">
+                  <img src="./assets/book-8.jpeg" alt="" class="book__img">
+                </figure>
+                <div class="book__titel">
+                  Mastery
+                </div>
+                <div class="book__ratings">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="book__price">
+                  <span class="book__price__normal">79.99€</span>29.99€
+                </div>
+              </div>
+             </div>
             </div>
         </div>
         </section>
+
+        <section id="explore">
+          <div class="container">
+            <div class="row row__column">
+                <h2> Mehr <span class="purple">Bücher</span></h2>
+               <a href="#features">
+
+                 <button class="btn">Suche Bücher</button>
+               </a>
+              
+          </div>
+          </div>
+        </section>
     </main>
+    
+    <footer>
+      <div class="container">
+        <div class="row row__column"><a href="#">
+
+          <figure class="footer__img__wrapper">
+            <img class="footer__img" src="./assets/Library.svg" alt="">
+          </figure>
+        </a>
+          <div class="footer__links">
+            <a href="" class="footer__link">Home</a>
+           <a href="" class="footer__link no-cursor" >Über</a>
+            <a href="#features" class="footer__link">Bücher</a>
+            <a href="mailto:sebastianhollerer@Gmail.com" class="footer__link">Kontakt</a>
+          </div>
+         <div class="footer__copyright">
+          Copyright &copy; 2021 Library
+         </div>
+        </div>
+        </div>
+    </footer>
   </body>
 </html>
