Fertige Seite mit HTML und CSS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <ul class="nav__links">
             <li><a class="nav__link" href="">Home</a></li>
             <li><a class="nav__link" href="mailto:sebastianhollerer@Gmail.com" class="footer__link">Kontakt</a>
-            <li><a class="nav__link__primary nav__link" href="">Books</a></li>
+            <li><a class="nav__link__primary nav__link" href="#features">Bücher</a></li>
           </ul>
         <button class="btn__menu" onclick="openMenu()">
           <i class="fas fa-bars"></i>
@@ -137,7 +137,6 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
                 </div>
                 <div class="book__price">
                   <span class="book__price__normal">49.99€</span>10.99€
@@ -155,7 +154,7 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
+                  <i class="fas fa-star"></i>
                 </div>
                 <div class="book__price">
                   <span class="book__price__normal">44.99€</span>12.99€
@@ -199,7 +198,6 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
                   <i class="fas fa-star-half-alt"></i>
                 </div>
                 <div class="book__price">
@@ -218,10 +216,9 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
                 </div>
                 <div class="book__price">
-                  <span class="book__price__normal">79.99€</span>29.99€
+                  <span class="book__price__normal">29.99€</span>14.99€
                 </div>
               </div>
               <div class="book">
@@ -235,11 +232,9 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
                 </div>
                 <div class="book__price">
-                  <span class="book__price__normal">79.99€</span>29.99€
+                  <span class="book__price__normal">40.99€</span>32.99€
                 </div>
               </div>
               <div class="book">
@@ -254,10 +249,10 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
+                  <i class="fas fa-star"></i>
                 </div>
                 <div class="book__price">
-                  <span class="book__price__normal">79.99€</span>29.99€
+                  <span class="book__price__normal">19.99€</span>9.99€
                 </div>
               </div>
               <div class="book">
@@ -275,7 +270,7 @@
                   <i class="fas fa-star-half-alt"></i>
                 </div>
                 <div class="book__price">
-                  <span class="book__price__normal">79.99€</span>29.99€
+                  <span class="book__price__normal">59.99€</span>40.99€
                 </div>
               </div>
               <div class="book">
@@ -290,10 +285,9 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
                 </div>
                 <div class="book__price">
-                  <span class="book__price__normal">79.99€</span>29.99€
+                  <span class="book__price__normal">33.99€</span>27.99€
                 </div>
               </div>
               <div class="book">
@@ -307,11 +301,10 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
                   <i class="fas fa-star-half-alt"></i>
                 </div>
                 <div class="book__price">
-                  <span class="book__price__normal">79.99€</span>29.99€
+                  <span class="book__price__normal">19.99€</span>10.99€
                 </div>
               </div>
               <div class="book">
@@ -325,11 +318,9 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
                 </div>
                 <div class="book__price">
-                  <span class="book__price__normal">79.99€</span>29.99€
+                  <span class="book__price__normal">47.99€</span>37.99€
                 </div>
               </div>
              </div>
